--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-parallax-tilt": "^1.7.115",
     "react-router-dom": "^6.8.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "typed.js": "^2.0.132"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
